[package]
name        = "tokio-raw"
version     = "0.0.3"
edition     = "2018"

authors     = ["Will <will@glozer.net>"]
description = "Raw sockets for tokio"
license     = "MIT"

[dependencies]
futures-core = "0.3.4"
libc         = "0.2.69"
mio          = "0.6.21"
socket2      = "0.3.12"

[dependencies.tokio]
version      = "0.2.20"
features     = ["io-driver"]
default-features = false

[dev-dependencies]
anyhow       = "1.0.28"

[dev-dependencies.tokio]
version      = "0.2.20"
features     = ["macros"]
